# keylayout

./: .gitignore  Cargo.toml  notes.md  overlap_penalties.csv  two_key_penalties.csv
benches/: perf.rs
src/: bit_set.rs  bits.rs  conflicts.rs  dfs.rs  dfs_pruning.rs  dictionary.rs  english.rs  evolution.rs  exhaustive.rs  exhaustive_n_key.rs  experiment.rs  fill_in.rs  frequency.rs  frequency_distribution.rs  generate_stats.rs  genetic.rs  item_count.rs  key.rs  key_set.rs  key_sizes_tree.rs  keyboard.rs  lazy_tree.rs  letter.rs  letter_map.rs  letter_pair.rs  letter_pair_set.rs  lib.rs  main.rs  merge_keys.rs  merge_keys_dfs.rs  overlap_penalties.rs  pair_penalties.rs  pair_penalties_with_sqlite.rs  pairing.rs  pairs.rs  partitionable.rs  partitions.rs  penalty.rs  penalty_goal.rs  permutable.rs  (+24 more)
