[package]
name = "keylayout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "perf"
harness = false

[dependencies]
humantime = "2.1.0"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
thousands = "0.2.0"
